@@ -6,6 +6,10 @@
     described in git-config(1) and can write git config files.
     (Jelmer Vernooij, #531092, #768687)
 
+  * ``Repo.do_commit`` will now use the user identity from
+    .git/config or ~/.gitconfig if none was explicitly specified.
+   (Jelmer Vernooij)
+
  BUG FIXES
 
   * Allow ``determine_wants`` methods to include the zero sha in their
